--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-type-email": "^1.1.2",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
