--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-id-validator": "^0.6.0",
     "mongoose-type-email": "^1.1.2",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
